--- a/spring-boot-security-simple/pom.xml
+++ b/spring-boot-security-simple/pom.xml
@@ -8,4 +8,21 @@
     <artifactId>spring-boot-security-simple</artifactId>
     <version>1.0-SNAPSHOT</version>
 
+    <parent>
+        <artifactId>spring-boot</artifactId>
+        <groupId>org.springframework.boot</groupId>
+        <version>2.2.0.RELEASE</version>
+    </parent>
+
+    <dependencies>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-security</artifactId>
+        </dependency>
+    </dependencies>
+
 </project>
