Change application name from 'security-simple' to 'app'

--- a/spring-boot-security-simple/pom.xml
+++ b/spring-boot-security-simple/pom.xml
@@ -2,7 +2,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.company</groupId>
-    <artifactId>security-simple</artifactId>
+    <artifactId>app</artifactId>
     <version>1.0</version>
     <packaging>jar</packaging>
 
