--- a/pom.xml
+++ b/pom.xml
@@ -11,17 +11,24 @@
         <maven.compiler.target>1.8</maven.compiler.target>
         <jsonwebtoken.version>0.9.0</jsonwebtoken.version>
         <lombok.version>1.18.10</lombok.version>
-        <dozer.version>5.0</dozer.version>
+        <dozer.version>5.5.1</dozer.version>
         <swagger.version>2.9.2</swagger.version>
     </properties>
 
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.2.0.RELEASE</version>
+        <version>2.2.2.RELEASE</version>
     </parent>
 
     <dependencies>
+        <!--[boot]-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter</artifactId>
+        </dependency>
+        <!--[boot]-->
+
         <!--[rest]-->
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -52,6 +59,14 @@
         </dependency>
         <!--[security]-->
 
+        <!--[json mapping]-->
+        <dependency>
+            <groupId>net.sf.dozer</groupId>
+            <artifactId>dozer</artifactId>
+            <version>${dozer.version}</version>
+        </dependency>
+        <!--[json mapping]-->
+
         <!--[other]-->
         <dependency>
             <groupId>org.projectlombok</groupId>
@@ -59,9 +74,9 @@
             <version>${lombok.version}</version>
         </dependency>
         <dependency>
-            <groupId>net.sf.dozer</groupId>
-            <artifactId>dozer</artifactId>
-            <version>${dozer.version}</version>
+            <groupId>io.springfox</groupId>
+            <artifactId>springfox-swagger2</artifactId>
+            <version>${swagger.version}</version>
         </dependency>
         <dependency>
             <groupId>io.springfox</groupId>
