Fix project name and models

--- a/pom.xml
+++ b/pom.xml
@@ -1,7 +1,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0">
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>sbaj</artifactId>
+    <artifactId>auth-api-service</artifactId>
     <groupId>com.github.egnaf</groupId>
     <version>1.0</version>
 
