Fix Travis CI for Gradle

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,10 +4,10 @@ install: true
 
 cache:
   directories:
-    - $HOME/.m2
+    - $HOME/.gradle
 
 script:
-  - mvn -B clean install && cd ..
+  - gradle build --refresh-dependencies && cd ..
 
 notifications:
   email:
